--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,26 +1,25 @@
 [package]
-name = "qvd"
-version = "0.0.15"
-authors = ["Sam Bentley <samtbentley@gmail.com>"]
+name = "qvd_utils"
+version = "0.1.0"
+authors = ["Hugo Tallys <hgtllys@gmail.com>"]
 edition = "2018"
 readme = "README.md"
 description = "A library for reading Qlik Sense .qvd file format from Python, written in Rust."
 license = "Apache-2.0"
-repository = "https://github.com/SBentley/qvd-utils"
+repository = "https://github.com/hugotallys/qvd-utils"
 keywords = ["python", "rust", "qlik", "sense", "qvd"]
 
 
 [lib]
-name = "qvd"
+name = "qvd_utils"
 crate-type = ["cdylib"]
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
 serde = { version = "1.0.117", features = ["derive"] }
-quick-xml = { version = "0.20.0", features = ["serialize"]}
+quick-xml = { version = "0.20.0", features = ["serialize"] }
 bitvec = "0.19.4"
 
 [dependencies.pyo3]
 version = "0.12.3"
 features = ["extension-module"]
-
