--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -1,6 +1,3 @@
-# This workflow will install Python dependencies, run tests and lint with a variety of Python versions
-# For more information see: https://help.github.com/actions/language-and-framework-guides/using-python-with-github-actions
-
 name: CI pipeline
 
 on:
@@ -17,19 +14,23 @@ jobs:
     steps:
       - uses: actions/checkout@v2
 
+      - name: Install build tools
+        run: sudo apt-get update && sudo apt-get install -y build-essential pkg-config libssl-dev libpython3-dev
+
       - name: rust-cargo
         uses: actions-rs/toolchain@v1
         with:
           toolchain: stable
+          profile: minimal
 
       - name: rust-build
-        uses: actions-rs/cargo@v1.0.1
+        uses: actions-rs/cargo@v1
         with:
           command: build
           args: --release --all-features --verbose
 
       - name: rust-test
-        uses: actions-rs/cargo@v1.0.1
+        uses: actions-rs/cargo@v1
         with:
           command: test
 
@@ -53,9 +54,7 @@ jobs:
         if [ -f requirements.txt ]; then pip install -r requirements.txt; fi
     - name: Lint with flake8
       run: |
-        # stop the build if there are Python syntax errors or undefined names
         flake8 . --count --select=E9,F63,F7,F82 --show-source --statistics
-        # exit-zero treats all errors as warnings. The GitHub editor is 127 chars wide
         flake8 . --count --exit-zero --max-complexity=10 --max-line-length=127 --statistics
     - name: Test with pytest
       run: |
@@ -102,4 +101,3 @@ jobs:
       env:
         MATURIN_PASSWORD: ${{ secrets.PYPI_PASSWORD }}
       run: maturin publish --username ${{ secrets.PYPI_USERNAME}}
-        
